--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema
+
+APP_URL=
+
+STORAGE_DRIVER=
