--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/multer": "^1.4.3",
+    "aws-sdk": "^2.1093.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.3",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "multer": "^1.4.2",
     "pg": "^8.0.3",
     "prisma": "^3.10.0",
